--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,26 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
+}
+
+.nav {
   padding: 2rem;
-  text-align: center;
+  display: grid;
+  grid-gap: 1.2rem;
+  grid-auto-flow: column;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.prose {
+  max-width: 65ch;
+  font-size: 1rem;
+  line-height: 1.75;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.prose>:first-child {
+  margin-top: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.prose p {
+  margin-top: 1.2rem;
+  margin-bottom: 1.2rem;
 }
