--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,19 @@
   margin-top: 0;
 }
 
+.prose h1{
+  color: #fff;
+  font-weight: 800;
+  font-size: 2.25em;
+  margin-bottom: 1em;
+  line-height: 1.2;
+}
+
 .prose p {
   margin-top: 1.2rem;
   margin-bottom: 1.2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
 }
