faet: algorithm blog

--- a/src/App.css
+++ b/src/App.css
@@ -24,19 +24,17 @@
   width: 100%;
   padding: 0.8rem 0;
   display: flex;
-  grid-gap: 1.2rem;
-  grid-auto-flow: column;
-  grid-template-columns: auto max-content;
+  gap: 1.2rem;
+  align-items: center;
   box-sizing: border-box;
 }
 
 .nav-small {
   width: 100%;
   padding: 1rem 0;
-  display: grid;
-  grid-gap: 0.6rem;
-  grid-auto-flow: column;
-  grid-template-columns: auto max-content;
+  display: flex;
+  gap: 1.2rem;
+  align-items: center;
   box-sizing: border-box;
 }
 
